--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 ---
 layout: default
-title: pysnow530，运维开发工程师
+title: pysnow530的博客
 ---
-<div class="blurb">
-  <h1>大家好，我是pysnow530。</h1>
-  <p>我是一个开源爱好者。现居深圳。欢迎交流。<a href="/about/">更多关于我的信息。。。</a></p>
-</div><!-- /.blurb -->
